# cw-gotchi

./: .env  .gitignore  Cargo.toml  build.sh
artifacts/: checksums.txt  checksums_intermediate.txt  cw2981_royalties-x86_64.wasm  cw2981_royalties.wasm  cw721_base-x86_64.wasm  cw721_base.wasm  cw721_expiration-x86_64.wasm  cw721_expiration.wasm  cw721_fixed_price-x86_64.wasm  cw721_fixed_price.wasm  cw721_gotchi.wasm  cw721_metadata_onchain-x86_64.wasm  cw721_metadata_onchain.wasm  cw721_non_transferable-x86_64.wasm  cw721_non_transferable.wasm  cw721_receiver_tester-x86_64.wasm  cw721_receiver_tester.wasm
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/src/: interface.rs  lib.rs  msg.rs  multi_tests.rs
contracts/cw721-gotchi/: Cargo.toml  README.md  first_gotchis.json  integration_tests.rs
contracts/cw721-gotchi/examples/: schema.rs
contracts/cw721-gotchi/schema/: cw721-gotchi.json  cw721-newtmagotchi.json
contracts/cw721-gotchi/src/: error.rs  execute.rs  interface.rs  lib.rs  msg.rs  query.rs  state.rs
contracts/cw721-newtmagotchi/: Cargo.toml
contracts/cw721-newtmagotchi/examples/: schema.rs
contracts/cw721-newtmagotchi/src/: error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs  utils.rs
contracts/cw721-non-transferable/: Cargo.toml
contracts/cw721-wearable/: Cargo.toml
contracts/cw721-wearable/examples/: schema.rs
contracts/cw721-wearable/src/: error.rs  execute.rs  interface.rs  lib.rs  msg.rs  query.rs  state.rs
