[workspace]
members = ["packages/*", "contracts/*"]
resolver = "2"

[workspace.package]
version = "0.18.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-nfts"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"
rust-version = "1.77"


[workspace.dependencies]
cosmwasm-schema = "^1.2"
cosmwasm-std = { version = "1.5.4", default-features = false, features = [
    "cosmwasm_1_2",

] }
cw2 = "^1.1"
cw20 = "^1.1"
cw721 = { version = "*", path = "./packages/cw721" }
cw721-base = { version = "*", path = "./contracts/cw721-base" }
cw-multi-test = "^0.20"
cw-ownable = "^0.5"
cw-storage-plus = "^1.1"
cw-utils = "^1.0"
schemars = "^0.8"
serde = { version = "1.0.152", default-features = false, features = ["derive"] }
thiserror = "^1.0"
