[package]
name = "cw721-gotchi"
description = "Feedable NFTs for Magotchi"
authors = ["Maurits Bos <mb.brains@gmail.com>"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

default = ["export"]
export = []
daemon-bin = ["cw-orch/daemon", "dep:clap", "dep:dotenv", "dep:env_logger"]

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw721 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
schemars = { workspace = true }
serde = { workspace = true }
cw-storage-plus = { workspace = true }
thiserror.workspace = true
cw-utils.workspace = true
cw-orch = { git = "https://github.com/AbstractSDK/cw-orchestrator.git", branch = "main" }
clap = { version = "4.5.7", optional = true }
dotenv = { version = "*", optional = true }
env_logger = { version = "*", optional = true }
partially = { version = "0.2.1", features = ["derive"] }

[dev-dependencies]
anyhow = "1.0.86"
speculoos = "0.11.0"


[[bin]]
name = "deploy"
required-features = ["daemon-bin"]

[[bin]]
name = "mint_gotchi"
required-features = ["daemon-bin"]
